<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="5dp"
    app:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_margin="4dp">

        <TextView
            android:id="@+id/scoreboardRank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/scoreboard_rank_placeholder"
            android:textSize="45sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/scoreboardUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"

            android:layout_marginStart="70dp"
            android:text="@string/scoreboard_username_placeholder"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/scoreboardScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="78dp"
            android:layout_marginTop="43dp"
            android:text="@string/scoreboard_score_placeholder"
            android:textColor="@color/black"
            android:textSize="15sp"/>
    </RelativeLayout>

</androidx.cardview.widget.CardView>