<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="4dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardProfilePic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="200dp"
        app:cardBackgroundColor="@color/purple_500">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardProfilePic2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="200dp"
            android:layout_gravity="center"
            android:layout_margin="5dp">

            <ImageView
                android:id="@+id/profile_picture"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/content_descr_profile_picture"/>

        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_margin="4dp">

        <TextView
            android:id="@+id/scoreboardRank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/scoreboard_rank_placeholder"
            android:textSize="45sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/scoreboardUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"

            android:layout_marginStart="70dp"
            android:text="@string/scoreboard_username_placeholder"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/scoreboardScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="78dp"
            android:layout_marginTop="43dp"
            android:text="@string/scoreboard_score_placeholder"
            android:textColor="@color/black"
            android:textSize="15sp"/>
    </RelativeLayout>

</androidx.cardview.widget.CardView>