<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/takePictureCoordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TakePictureFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/takePictureConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/uploadButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:contentDescription="@string/content_descr_upload_button"
            android:focusable="true"
            android:src="@android:drawable/ic_menu_upload"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/takePictureButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:contentDescription="@string/content_descr_take_picture_button"
            android:focusable="true"
            android:src="@android:drawable/ic_menu_camera"
            app:layout_constraintBottom_toTopOf="@+id/uploadButton"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/takenPicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_descr_picture_taken"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>