<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/takePictureCoordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TakePictureFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/takePictureButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:clickable="true"
        android:contentDescription="@string/content_descr_take_picture_button"
        android:focusable="true"
        android:src="@android:drawable/ic_menu_camera"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/uploadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:clickable="true"
        android:contentDescription="@string/content_descr_upload_button"
        android:focusable="true"
        android:src="@android:drawable/ic_menu_upload" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/takePictureConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.camera.view.PreviewView
            android:id="@+id/previewView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/takenPicture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/content_descr_picture_taken"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>