<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    app:cardCornerRadius="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/tourFirstPic"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:scaleType="fitXY"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tourName"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/content_descr_tour_first_pic" />

        <TextView
            android:id="@+id/tourName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@+id/tourFirstPic"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/tourPicCountIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@id/tourFirstPic"
            app:layout_constraintEnd_toStartOf="@+id/tourPicCount"
            app:layout_constraintTop_toBottomOf="@id/tourName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="@drawable/ic_baseline_collections_24"
            android:contentDescription="@string/content_descr_tour_pic_count_icon" />

        <TextView
            android:id="@+id/tourPicCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@+id/tourPicCountIcon"
            app:layout_constraintEnd_toStartOf="@id/tourDistanceIcon"
            app:layout_constraintTop_toBottomOf="@id/tourName"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageView
            android:id="@+id/tourDistanceIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@id/tourPicCount"
            app:layout_constraintEnd_toStartOf="@+id/tourDistance"
            app:layout_constraintTop_toBottomOf="@id/tourName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="@drawable/ic_baseline_location_on_24"
            android:contentDescription="@string/content_descr_tour_distance_icon" />

        <TextView
            android:id="@+id/tourDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@+id/tourDistanceIcon"
            app:layout_constraintEnd_toStartOf="@id/tourLengthIcon"
            app:layout_constraintTop_toBottomOf="@id/tourName"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageView
            android:id="@+id/tourLengthIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@id/tourDistance"
            app:layout_constraintEnd_toStartOf="@+id/tourLength"
            app:layout_constraintTop_toBottomOf="@id/tourName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="@drawable/ic_baseline_directions_24"
            android:contentDescription="@string/content_descr_tour_length_icon" />

        <TextView
            android:id="@+id/tourLength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@+id/tourLengthIcon"
            app:layout_constraintTop_toBottomOf="@id/tourName"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>